working version but needs more testing